tests/parser/parser-first-error.swg
// ============================================================================
// Parser First Error
// ============================================================================

} // swc-expected-error {{ParserUnexpectedToken}}
{ // swc-expected-error {{ExpectedClosing}}
;
